fix z-index

--- a/src/assets/src/css/widget.css
+++ b/src/assets/src/css/widget.css
@@ -1,5 +1,6 @@
 #hero {
   position: relative;
+  z-index: 0;
 }
 #hero h1 {
   font-size: 14px;
